syntax = "proto3";

 package grpc;

 option java_package = "com.grpc.empuje_comunitario.proto";
 option java_multiple_files = true;
 option java_outer_classname = "UserServiceProto";

 service UserService {
   rpc CreateUser (CreateUserRequest) returns (GenericResponse);
   rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
   rpc DisabledUser (DisabledUserRequest) returns (GenericResponse);
   rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
 }

 // Modelo de usuario
 message UserProto {
   string id = 1;
   string username = 2;
   string name = 3;
   string lastname = 4;
   string phone = 5;
   string email = 6;
   string role = 7;
   bool active = 8;
 }

 // Requests
 message CreateUserRequest {
   string username = 1;
   string name = 2;
   string lastname = 3;
   string phone = 4;
   string email = 5;
   string role = 6;
 }

 message UpdateUserRequest {
   string token = 1;
   UserProto user = 2;
 }

 message DisabledUserRequest {
   string id = 1;
 }

 message ListUsersRequest {
   string token = 1;
 }

 message GenericResponse {
   bool success = 1;
   string message = 2;
 }

 message ListUsersResponse {
   bool success = 1;
   string message = 2;
   repeated UserProto users = 3;
 }

 message UpdateUserResponse {
   bool success = 1;
   string message = 2;
   UserProto user = 3;
 }
